--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,20 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "bootstrap": [
+            "php -r \"copy('.env.example', '.env');\"",
+            "php artisan key:generate"
+        ],
+        "clear-project-cache": [
+            "php artisan cache:clear",
+            "php artisan route:clear",
+            "php artisan view:clear",
+            "php artisan config:cache",
+            "php artisan optimize"      
+        ],
+        "teste": [
+            "@php artisan storage:link"
         ]
     },
     "extra": {
