composer cache clear

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/assets/js/app.js": "/assets/js/app.js",
-    "/assets/css/app.css": "/assets/css/app.css"
+    "/assets/js/app.js": "/assets/js/app.js?id=01d7a159088e7d2ce01e1433fa756212",
+    "/assets/css/app.css": "/assets/css/app.css?id=e08ea6bf18e2ed051dd5af5d3a48de15"
 }
